# ss25_mathe-assignement

./: README.md  ss25_mathematik_prompt-engineeringv2.pptx
assignement/: .env  README.md  prompt_engineering.py  pyproject.toml
